--- a/Oppgave_01/index.html
+++ b/Oppgave_01/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <link rel="stylesheet" href="src/styles.css" />
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-  <title>Parcel Sandbox</title>
-  <meta charset="UTF-8" />
-</head>
+  <body>
+    <div id="app"></div>
 
-<body>
-  <div id="app"></div>
-
-  <script src="src/start.js"></script>
-</body>
-
+    <script src="src/start.js"></script>
+  </body>
 </html>
