--- a/Oppgave_03/index.html
+++ b/Oppgave_03/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <link rel="stylesheet" type="text/css" href="src/styles.css" />
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-  <title>Parcel Sandbox</title>
-  <meta charset="UTF-8" />
-</head>
+  <body>
+    <main id="main">
+      <p id="word">Ord kommer her</p>
+      <p id="letter">Bokstaven du skrev kommer her</p>
+      <p id="wrongs">Antall feil kommer her</p>
+      <button>Startknapp</button>
+    </main>
 
-<body>
-  <main id="main">
-    <p id="word">Ord kommer her</p>
-    <p id="letter">Bokstaven du skrev kommer her</p>
-    <p id="wrongs">Antall feil kommer her</p>
-    <button>Startknapp</button>
-  </main>
-
-  <script src="./src/ingen_hjelp.js"></script>
-</body>
-
+    <script src="./src/ingen_hjelp.js"></script>
+  </body>
 </html>
